--- a/Finals Build/index.html
+++ b/Finals Build/index.html
@@ -29,9 +29,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/Finals Build.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Finals Build.data.br",
-        frameworkUrl: buildUrl + "/Finals Build.framework.js.br",
-        codeUrl: buildUrl + "/Finals Build.wasm.br",
+        dataUrl: buildUrl + "/Finals Build.data",
+        frameworkUrl: buildUrl + "/Finals Build.framework.js",
+        codeUrl: buildUrl + "/Finals Build.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Pehnnheise2",
